# yu

./: .clangd  .gitignore  404.html  CMakeLists.txt  README.md  index.html  sitemap.xml
.cache/yukit/: index.json
.github/workflows/: docs.yml
assets/javascripts/: italicizeSpecialIdentifiers.js
design/: index.html
design/development-style/: index.html
design/extensibility/: index.html
design/namespaces/: index.html
design/physical-configuration/: index.html
design/principle/: index.html
design/sublibrary/: index.html
design/versioning/: index.html
docs/: CMakeLists.txt  macros.py  mkdocs.yml
docs/docs/: .pages  index.md
include/yu/: expr.hpp  match.hpp  select.hpp  tuples.hpp
license/: index.html
reference/: index.html
reference/tuples/: index.html
release/: index.html
search/: search_index.json
spec/tuples/: all_of.yaml  any_of.yaml  applicable.yaml  apply.yaml  apply_result.yaml  contains.yaml  contains_slice.yaml  count.yaml  count_if.yaml  element_t.yaml  elementwise_invocable.yaml  elementwise_predicate.yaml  elementwise_regular_invocable.yaml  elementwise_unary_invocable.yaml  elementwise_unary_predicate.yaml  ends_with.yaml  equal.yaml  fold_left.yaml  fold_left_first.yaml  fold_right.yaml  fold_right_last.yaml  for_each.yaml  for_each_n.yaml  get.yaml  index_sequence_for.yaml  is_applicable.yaml  is_applicable_r.yaml  is_nothrow_applicable.yaml  is_nothrow_applicable_r.yaml  known_tuple.yaml  none_of.yaml  regular_applicable.yaml  size.yaml  starts_with.yaml  tuple.yaml  tuple_structured.yaml
tests/: CMakeLists.txt  select_test.cpp
tests/tuples/: CMakeLists.txt  apply.cpp  apply_result.cpp  element_t.cpp  element_type.cpp  elementwise_invocable.cpp  elementwise_predicate.cpp  elementwise_regular_invocable.cpp  elementwise_unary_invocable.cpp  elementwise_unary_predicate.cpp  get.cpp  index_sequence_for.cpp  is_applicable.cpp  known_tuple.cpp  size.cpp  tuple.cpp  tuple_structured.cpp  tuples.cpp
tools/yukit/: CMakeLists.txt
tools/yukit/include/yukit/cmd/: create.hpp  create_alias.hpp  docs_cmd.hpp  index_cmd.hpp  make_index.hpp  new_cmd.hpp  ref.hpp  status.hpp  status_cmd.hpp
tools/yukit/include/yukit/cmd/docs/: pages_cmd.hpp  serve_cmd.hpp
tools/yukit/include/yukit/cmd/reference/: make_template.hpp  pages.hpp  serve.hpp
tools/yukit/include/yukit/util/: entity_exists.hpp  entity_path.hpp  get_root.hpp  replace_ns_qualifier.hpp  sublib_exists.hpp  valid_entity_name.hpp
tools/yukit/src/: get_root.cpp  get_root.hpp  index_cmd.cpp  index_cmd.hpp  main.cpp  new_cmd.cpp  new_cmd.hpp  replace_all_namespace_quarifier.cpp  replace_all_namespace_quarifier.hpp  status_cmd.cpp  status_cmd.hpp
tools/yukit/src/yukit/: main.cpp
tools/yukit/src/yukit/cmd/: create.cpp  create_alias.cpp  docs_cmd.cpp  index_cmd.cpp  make_index.cpp  new_cmd.cpp  ref.cpp  status.cpp  status_cmd.cpp
tools/yukit/src/yukit/cmd/docs/: pages_cmd.cpp  serve_cmd.cpp
tools/yukit/src/yukit/cmd/reference/: make_template.cpp  pages.cpp  serve.cpp
tools/yukit/src/yukit/util/: entity_exists.cpp  entity_path.cpp  get_root.cpp  replace_ns_qualifier.cpp  sublib_exists.cpp  valid_entity_name.cpp
yukit/: index.json
yukit/tuples/: all_of.yaml  any_of.yaml  applicable.yaml  apply.yaml  apply_result.yaml  apply_result_t.yaml  contains.yaml  (+36 more)
(+231 files in other folders)
