add_library(yu_tuples INTERFACE)
add_library(yu::tuples ALIAS yu_tuples)

target_link_libraries(yu_tuples INTERFACE yu)

file(GLOB TEST_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

foreach(test_src ${TEST_SOURCES})

    get_filename_component(test_name ${test_src} NAME_WE)

    add_executable(${test_name} ${test_src})

    target_link_libraries(${test_name}
        PRIVATE yu::tuples
    )

    add_test(
        NAME ${test_name}
        COMMAND ${test_name}
    )

endforeach()